# sphero-btconn

BTUT/: BluetoothProtoTest.cpp  SpheroCommandTest.cpp  SpheroPacketTest.cpp  stdafx.cpp  stdafx.h
bluetoothconn/: CMakeLists.txt  Readme.md  btconn.h.in
bluetoothconn/btconn/: SpheroCommands.h  SpheroPacketTypes.h  targetver.h
bluetoothconn/src/: BtLogger.cpp  SpheroHandler.cpp  stdafx.cpp
include/: btconn.h
include/btconn/: BluetoothProto.h  BtConnection.h  BtLogger.h  NotConnectedException.h  SpheroHandler.h  stdafx.h
lib/x86/: btconn.lib
